--- a/beacon/pom.xml
+++ b/beacon/pom.xml
@@ -42,6 +42,11 @@
 	        <version>1.18.20</version>
 	        <scope>provided</scope>
 	    </dependency>
+	    <dependency>
+		    <groupId>org.mapstruct</groupId>
+		    <artifactId>mapstruct</artifactId>
+		    <version>1.4.2.Final</version> 
+		</dependency>
 		<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
