--- a/task-list-app/package.json
+++ b/task-list-app/package.json
@@ -11,6 +11,7 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
+    "@types/reach__router": "^1.3.10",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.26.1",
