task[001]: Add application variables

--- a/beacon/src/main/resources/application.properties
+++ b/beacon/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.application.name=task-beacon
+timezone.api.token=VAQC6KNHS0BR
